--- a/JS/Project1.html
+++ b/JS/Project1.html
@@ -1,3 +1,7 @@
+<!-- Brandon Angos Web Dev
+11/23/2022
+Calorie Calculator -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -325,10 +329,10 @@
         </div>
 
         <div class="CalorieBtns">
-            <button onclick="rCA();">reset A</button>
-            <button onclick="rCE();">reset E</button>
-            <button onclick="rCD();">reset D</button>
-            <button onclick="set0();">Reset Everything</button>
+            <button id="button1" onclick="rCA();">reset A</button>
+            <button id="button2" onclick="rCE();">reset E</button>
+            <button id="button3" onclick="rCD();">reset D</button>
+            <button id="button4" onclick="set0();">Reset Everything</button>
         </div>
     </div>
 
