--- a/JS/Level2.html
+++ b/JS/Level2.html
@@ -17,19 +17,19 @@
 
     </style>
 
-    <script>
+    <script src="Script.js">
 
         function initialize(){
-            ChristmasText=document.getElementById("colorDiv")
-            fore = "black";
-            back = "red";
-            textWidth = 100;
+            // ChristmasText=document.getElementById("colorDiv")
+            // fore = "black";
+            // back = "red";
+            // textWidth = 100;
 
-            tetxO=document.getElementById("textDiv");
-            fontO=document.getElementById("sizeout");
+            // tetxO=document.getElementById("textDiv");
+            // fontO=document.getElementById("sizeout");
 
-            fontSize=24;
-            fontO.innerHTML=fontSize;
+            // fontSize=24;
+            // fontO.innerHTML=fontSize;
 
         }
 
