--- a/JS/Level2.html
+++ b/JS/Level2.html
@@ -17,7 +17,7 @@
 
         a{
             font:24pt arial;
-            colr:blue;
+            color:blue;
             text-decoration: none;
         }
     </style>
