--- a/JS/Level3.html
+++ b/JS/Level3.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Document</title>
     <script src="Scripts.js"></script>
+    <!-- in this level whats different about the javascript is that a lot more variables are being used a 
+        lot more functions are being called in other functions. Also, a lot of the javascript can help 
+        create new elements in the html besides editing/modifying it based on what we did in the last level.-->
     <script>
         function init(){
             diceTable=document.getElementById("dicetable");
