--- a/JS/Project3.html
+++ b/JS/Project3.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="Scripts.js"></script>
     <title>Document</title>
+    <style>
+   
+        th{
+            background-color:salmon;
+            border:solid rgb(194, 1, 1) 5px;
+            padding:10px;
+            width:75px;
+            height:50px;
+
+        }
+    </style>
+    <script>
+
+    </script>
 </head>
 <body>
     
 </body>
+<div id="rollDice">
+    <table>
+        <tr>
+            <th>Roll</th>
+            <th>Result</th>
+        </tr>
+
+    </table>
+</div>
+<div>
+    <form id="menu">
+        
+    </form>
+</div>
+
 </html>
