--- a/JS/Project3.html
+++ b/JS/Project3.html
@@ -169,11 +169,11 @@
                 </tr>
                 <tr>
                     <td>Frequency of 4s</td>
-                    <td id="44s"></td>
+                    <td id="444s"></td>
                 </tr>
                 <tr>
                     <td>Frequency of 5s</td>
-                    <td id="55s"></td>
+                    <td id="555s"></td>
                 </tr>
                 <tr>
                     <td>Frequency of 6s</td>
@@ -233,19 +233,19 @@
                 </tr>
                 <tr>
                     <td>Number of Doubles</td>
-                    <td id="Doubles"></td>
+                    <td id="DDoubles"></td>
                 </tr>
                 <tr>
                     <td>Mean</td>
-                    <td id="MMean"></td>
+                    <td id="MMMean"></td>
                 </tr>
                 <tr>
                     <td>Mode</td>
-                    <td id="MMode"></td>
+                    <td id="MMMode"></td>
                 </tr>
                 <tr>
                     <td>Median</td>
-                    <td id="MMedian"></td>
+                    <td id="MMMedian"></td>
                 </tr>
               
             </table>
