--- a/JS/Project3.html
+++ b/JS/Project3.html
@@ -35,7 +35,7 @@
     </style>
     <script src="Scripts.js"></script>
 </head>
-<body onload="init();">
+<body id="Project3" onload="init();">
     
     <div class="grid">
         <div id="header">
